config/iptables.rules.v4
# Generated by iptables-save v1.4.21 on Tue Jun 13 11:50:01 2017
*filter
:INPUT ACCEPT [68:5795]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [39:10607]
:INTERNET_IN - [0:0]
:INTERNET_OUT - [0:0]
-A INPUT -s 192.168.0.0/16 -j RETURN
-A INPUT -s 127.0.0.1/32 -j RETURN
-A INPUT -s 127.0.0.1/32 -j RETURN
-A INPUT -j INTERNET_IN
-A OUTPUT -d 192.168.0.0/16 -j RETURN
-A OUTPUT -d 127.0.0.1/32 -j RETURN
-A OUTPUT -d 127.0.0.1/32 -j RETURN
-A OUTPUT -j INTERNET_OUT
-A INTERNET_IN -j RETURN
-A INTERNET_OUT -j RETURN
COMMIT
# Completed on Tue Jun 13 11:50:01 2017
